# discord-bookmarks-and-reminders-bot

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  components.rs  database.rs  main.rs  models.rs
src/components/: bookmark.rs  delete_message_button.rs  interaction_custom_id.rs  relative_timestamp_string.rs  reminder.rs
src/components/bookmark/: bookmark_created_reply.rs  bookmark_message.rs  get_bookmark_reply.rs  no_bookmarks_found_reply.rs
src/components/reminder/: get_reminders_reply.rs  no_reminders_found_reply.rs  reminder_created_reply.rs  reminder_message.rs  reminder_time_select_menu.rs
src/components/reminder/reminder_time_select_menu/: menu_value.rs  select_menu.rs
src/database/: bookmark.rs  reminder.rs
src/models/: bookmark.rs  reminder.rs
