[package]
name = "discord-attendant"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
dotenvy = "0.15.7"
poise = "0.6.1"
serde_json = "1.0.140"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
# Added solely for the ability to reference types in this package in my doc comments.
# Make sure this stays in sync with the version used by tokio-rusqlite - a bonus benefit
# of keeping it in sync is that it won't pull any additional files during compilation!
rusqlite = "0.32.0" 
uuid = { version = "1.16.0", features = ["v7"] }
strum = "0.27.1"
strum_macros = "0.27.1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"